# training-readiness-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  pyproject.toml  pytest.ini
database/queries/: append_to_duckdb.sql  calculate_1wk_training_stress.py  clean_trainingpeaks_data.py  create_duckdb.sql  load_trainingpeaks_data.py  load_trainingpeaks_data.sql
database/queries/training_peaks/export_data/: calculate_48hr_training_stress.py
docker/: docker-compose.yaml
docker/docker/: env.template  init-training.sql  metabase-setup.sh  run_docker.sh
docs/: dependency-management.md  etl_style_guide.md  top_metrics.md
project_docs/: install_configure_metabase_open_source.md  install_duckdb_workflow.md  project_dashboard.md
scripts/: manage_deps.py
source_data/apple_health/: process_resting_hr_data.py  process_sleep_data.py
src/training_readiness/: __init__.py
src/training_readiness.egg-info/: PKG-INFO
src/training_readiness/etl/: __init__.py
src/training_readiness/etl/process_data/: __init__.py
src/training_readiness/resources/hevy/: primary_muscle_rollup.csv  sample_rollup_location.csv
tests/: README.md  __init__.py
tests/integrations/etl/: test_hevy_integration.py  test_hevy_real_data.py
tests/unit/datasources/: __init__.py
tests/unit/datasources/apple_health/: __init__.py  test_extract_resting_hr_data_from_xml.py  test_extract_sleep_data_from_xml.py  test_format_datetime.py  test_process_resting_hr_data.py  (+3 more)
visualization/docker/: docker-compose.yaml  init-training.sql  metabase-setup.sh
(+29 files in other folders)
